# Godot-Rust-SMB-clone

./: .gitignore  README.md  build.py
godot/: export_presets.cfg  project.godot
godot/.import/: Bricks.png-e9188393411e0f7b1c436ab443b4615e.md5  Bricks.png-e9188393411e0f7b1c436ab443b4615e.stex  BricksUnderground.png-78ff4ecc9f31d91c3f69e2eb9d175cae.md5  BricksUnderground.png-78ff4ecc9f31d91c3f69e2eb9d175cae.stex  Dirt.png-d8acf1eeb10229500f954f3bdcfe6f8d.md5  Dirt.png-d8acf1eeb10229500f954f3bdcfe6f8d.stex  DirtUnderGround.png-676b5118cb324ee116c36a07935258cc.md5  DirtUnderGround.png-676b5118cb324ee116c36a07935258cc.stex  Floor.png-bc8a4edf6ae2bdb94b3d7263e6227575.md5  Floor.png-d81568dfc3e51d5406d9b988ad96cf5e.stex  FloorUnderground.png-54a03c715d4178f88fc8dd31619444d9.md5  FloorUnderground.png-54a03c715d4178f88fc8dd31619444d9.stex  Goomba-interpolated.png-7bc768f66503ba1f0edb915003a39c9c.md5  Goomba-interpolated.png-7bc768f66503ba1f0edb915003a39c9c.stex  Goomba-interpolated.png-ab78526c5281513903ff6b7994335644.md5  Goomba-interpolated.png-ab78526c5281513903ff6b7994335644.stex  GoombaUnderground-interpolated.png-9859ab040bba5d33ca9892ea3d5f65f0.md5  GoombaUnderground-interpolated.png-9859ab040bba5d33ca9892ea3d5f65f0.stex  Mushroom1.png-1eb5075f8468e58ff9e80d8776773baa.md5  Mushroom1.png-46560ed8833d9f991c30d6c8a891541b.stex  Mushroom2.png-3db140a8cb19be36823a8682e1609cf4.stex  Mushroom2.png-400fe84f28e4f353f46ac8b3064bf69a.md5  (+14 more)
godot/levels/: Level 1-1.tscn
rust/: Cargo.toml
rust/src/: bricks.rs  lib.rs  mushroom.rs  player.rs  question_block.rs  roomba.rs
(+37 files in other folders)
